--- a/index.html
+++ b/index.html
@@ -6,36 +6,39 @@
     <title>Document</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
     
     <div class="grid-container">
         <div>
-            <img class="mole" src="assets/images/mole.png">
+            <img id="mole1" class="mole" src="assets/images/mole.png">
         </div>
         <div> 
-            <img class="mole" src="assets/images/mole.png">
+            <img id="mole2" class="mole" src="assets/images/mole.png">
         </div>
         <div>
-            <img class="mole" src="assets/images/mole.png">
+            <img id="mole3" class="mole" src="assets/images/mole.png">
         </div>
         <div>
-            <img class="mole" src="assets/images/mole.png">
+            <img id="mole4" class="mole" src="assets/images/mole.png">
         </div>
         <div>
-            <img class="mole" src="assets/images/mole.png">
+            <img id="mole5" class="mole" src="assets/images/mole.png">
         </div>
         <div>
-            <img class="mole" src="assets/images/mole.png">
+            <img id="mole6" class="mole" src="assets/images/mole.png">
         </div>
         <div>
-            <img class="mole" src="assets/images/mole.png">
+            <img id="mole7" class="mole" src="assets/images/mole.png">
         </div>
         <div>
-            <img class="mole" src="assets/images/mole.png">
+            <img id="mole8" class="mole" src="assets/images/mole.png">
         </div>
         <div>
-            <img class="mole" src="assets/images/mole.png">
+            <img id="mole9" class="mole" src="assets/images/mole.png">
         </div>
     </div>
+    <p>Score <span id="score">0</span></p>
+    <script src = "assets/js/script.js"></script>
 </body>
 </html>
