Add total moles

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
             <img id="mole9" class="mole" src="assets/images/mole.png">
         </div>
     </div>
-    <p>Score <span id="score">0</span></p>
+    <p>Moles Whacked <span id="score">0</span></p>
+    <p>Total Moles <span id="total">0</span></p>
     <script src = "assets/js/script.js"></script>
 </body>
 </html>
