--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     </div>
     <p>Moles Whacked <span id="score">0</span></p>
     <p>Total Moles <span id="total">0</span></p>
+    <p>Whack Rate <span id="rate">0</span>%</p>
     <script src = "assets/js/script.js"></script>
 </body>
 </html>
