--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
     <p>Moles Whacked <span id="score">0</span></p>
     <p>Total Moles <span id="total">0</span></p>
     <p>Whack Rate <span id="rate">0</span>%</p>
+    <input type="radio" id="superEasy" name="level"  value="4000">
+    <label for="superEasy">Super Easy</label>
+    <input type="radio" id="easy" name="level" value="1500">
+    <label for="easy">Easy</label>
+    <input type="radio" id="harder" name="level" value="1000">
+    <label for="harder">Harder</label>
     <script src = "assets/js/script.js"></script>
 </body>
 </html>
