Add code for levels

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <p>Whack Rate <span id="rate">0</span>%</p>
     <input type="radio" id="superEasy" name="level"  value="4000">
     <label for="superEasy">Super Easy</label>
-    <input type="radio" id="easy" name="level" value="1500">
+    <input type="radio" id="easy" name="level" value="1500", checked>
     <label for="easy">Easy</label>
     <input type="radio" id="harder" name="level" value="1000">
     <label for="harder">Harder</label>
