--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <script>
-        window.location.href = "http://www.w3schools.com";
+        window.location.href = "index.html";
     </script>
 </body>
 </html>
